//
//  OrderBookType.hpp
//  Exchanger
//
//  Created by Laurence Burden on 11/13/25.
//
#ifndef ORDER_BOOK_TYPE
#define ORDER_BOOK_TYPE

enum class OrderBookType {bid, ask, error};

#endif // !ORDER_BOOK_TYPE
